test_regress/t/t_param_type_bad.out
%Error: t/t_param_type_bad.v:9:27: syntax error, unexpected INTEGER NUMBER
    9 |    localparam type bad2 = 2;   
      |                           ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
